--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -82,7 +82,7 @@
             <div class="header-right flex flex-row">
                 
                 
-                <div class="more-wrapper">
+                <div *ngIf="showMoreMenu" class="more-wrapper">
                     <img mat-button [matMenuTriggerFor]="menu" src="/assets/icons/three-dots.svg" alt="">
                     <mat-menu #menu="matMenu">
                         <button *ngIf="showDownloadBtn" class="download-btn" mat-menu-item (click)="download()">
@@ -112,11 +112,22 @@
     <div class="table-wrapper" *ngIf="!tableErrorMessage && data.length>0">
         <table mat-table [dataSource]="dataSource" [matSortActive]="headerColName" [matSortDirection]="direction" matSortDisableClear matSort (matSortChange)="announceSortChange($event)">
             <ng-container *ngFor="let column of whiteListColumns;" [matColumnDef]="column">
-                <th [style.width]="columnWidths[column]*screenWidthFactor+'px'" mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </th>
+                <th [style.width]="columnWidths[column]*screenWidthFactor+'px'" mat-header-cell *matHeaderCellDef [mat-sort-header]="column!='Actions' && column!='DetailsBtn'?column:false"> {{ column!='Actions' && column!='DetailsBtn'?column:'' }} </th>
                 <td [style.width]="columnWidths[column]*screenWidthFactor+'px'" class="capitalize" mat-cell *matCellDef="let element"> 
                     <div class="nowrap-ellipsis" *ngIf="element[column] || element[column]==0">
                         <img *ngIf="imageDataMap[element[column]] && imageDataMap[element[column]]['image']" style="vertical-align: text-bottom;" src="/assets/icons/{{imageDataMap[element[column]].image}}.svg" [title]="element[column]"> 
-                    <span  *ngIf="!imageDataMap[element[column]] || !imageDataMap[element[column]].imageOnly" [title]="element[column]=='NR'?'No Resources':element[column]">{{ element[column] }} </span>
+                        <span [class.row-title]="column=='Title'" *ngIf="!imageDataMap[element[column]] || !imageDataMap[element[column]].imageOnly" [title]="element[column]=='NR'?'No Resources':element[column]">{{ element[column] }} </span>
+                    </div>
+                    <div *ngIf="column=='Actions'" style="text-align: center;">
+                        <img class="pointer" width="20px" mat-button [matMenuTriggerFor]="menu" src="/assets/icons/three-dots.svg" alt="">
+                        <mat-menu #menu="matMenu">
+                            <button (click)="handleClick(element, action)" style="min-width: 156px;" *ngFor="let action of actionsList" mat-menu-item>
+                                <span >{{ action }}</span>
+                            </button>
+                        </mat-menu>
+                    </div>
+                    <div *ngIf="column=='DetailsBtn'" style="text-align: center;">
+                        detailsBtn
                     </div>
                     <div class="nowrap-ellipsis" *ngIf="!element[column] && element[column]!=0">
                         <span>No Data</span>
@@ -124,7 +135,7 @@
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="whiteListColumns; sticky: true"></tr>
-            <tr (click)="goToDetails(row)" mat-row *matRowDef="let row; columns: whiteListColumns;"></tr>
+            <tr (click)="handleClick(row)" [class.row-hover]="rowClickable" mat-row *matRowDef="let row; columns: whiteListColumns;"></tr>
         </table>
     </div>
     </div>
