--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -31,7 +31,7 @@
                         <app-table style="height: 100%; width: 100%;" (cellSelectEventEmitter)="goToDetails($event)"
                             [data]="tableData" [columnWidths]="columnWidths" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                             [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
-                            [imageDataMap]="tableImageDataMap" (searchCalledEventEmitter)="callNewSearch($event)"
+                            (searchCalledEventEmitter)="callNewSearch($event)"
                             [searchQuery]="searchTxt" (nextPageCalled)="nextPage($event)" [tableErrorMessage]='errorMessage'
                             [showSearchBar]="true" [showMoreMenu]="false" [showDownloadBtn]="false" [showAddRemoveCol]="false" [showFilterBtn]="false" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
                             [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [columnsSortFunctionMap]="columnsSortFunctionMap" [actionsList]="['Disable', 'Edit', 'Revoke']"
