--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -15,7 +15,7 @@
                         [data]="tableData" [columnWidths]="columnWidths"
                         [columnsSortFunctionMap]="columnsSortFunctionMap" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                         [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
-                        [imageDataMap]="tableImageDataMap" [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
+                        [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
                         [searchQuery]="searchTxt" (nextPageCalled)="nextPg($event)" (downloadClicked)="handlePopClick($event)" (selectedFilterType)='changeFilterType($event)'
                         (selectedFilter)="changeFilterTags($event)" [filteredArray]="filters" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
                         (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions" [tableErrorMessage]='tableErrorMessage'
