--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.css
@@ -12,610 +12,166 @@
  * limitations under the License.
  */
 
-.floating-widgets-section {
+ .page-layout{
+  padding: 28px;
   height: 100%;
-  width: 100%;
 }
 
-.floating-widgets-container {
-  overflow: hidden;
+.left-wrapper{
+  border-right: 2px solid var(--border-200);
+  padding-right: 24px;
+  height: 100%;
+  width: 21%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  min-width: 300px;
 }
 
-.floating-widgets-container:hover {
-  overflow: auto;
-  overflow: overlay;
+.right-wrapper{
+  width: 60%;
+  padding: 0px 24px;
+  overflow: scroll;
+  border-left: 2px solid var(--border-200);
 }
 
-.floating-widgets-filter-wrapper {
-  padding: 0em 1.5em 1.5em;
+.button-wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.widget-wrapper {
-  padding-bottom: 4px;
-}
-
-.text-wrapper-header {
-  margin-bottom: 0.6em;
-  margin-top: 2em;
-  font-family: var(--text-medium-font-family);
-  color: #7b7b7b;
-}
-
-input.inputarea-container {
-  width: 100%;
-  height: 2em;
-  padding: 0 0.5em;
-  display: inline-block;
-  border: none;
-}
-
-.textarea-container {
-  border: 1px solid #aaa;
-  border-radius: 0.3em;
+.page{
   background-color: var(--background-white);
-  padding: 0.8em;
-  width: 100%;
-  height: 9em;
-  resize: none;
+  padding: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-ul.input-wrapper {
-  border: 1px solid #aaa;
-  border-radius: 0.3em;
-  background-color: var(--background-white);
-  padding: 0.3em;
+.title{
+font-family: 'Mark Pro';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 140%;
+color: var(--text-high-emphasis);
 }
 
-.sub-head {
-  padding: 0.6em 0.8em;
-  background-color: var(--background-white);
-  border: solid 1px #dce1e8;
-  color: #555;
-  font-size: 1em;
+.sub-text{
+font: var(--text-body-1);
+color: var(--text-medium-emphasis);
+flex: none;
+order: 1;
+flex-grow: 0;
 }
 
-.data-table-wrap {
-  border-radius: var(--border-radius);
-  background-color: var(--background-white);
-  box-shadow: 0 1px 7px -1px #0000001e, 0 2px 4px 0 #00000023;
-  font-size: 1em;
-  overflow: hidden;
+.text-wrapper {
+display: flex;
+flex-direction: column;
+gap: 16px;
 }
 
-.data-table-wrap.loading {
-  min-height: 34em;
+.right-wrapper-header{
+  font: var(--text-subtitle-1);
+  color: var(--text-medium-emphasis);
 }
 
-.data-table-wrap.small-content {
-  min-height: 1em;
+.remove-icon{
+  width: 16px;
 }
 
-.filter-absent.issue-listing-wrapper ::ng-deep .data-table-wrap {
-  max-height: calc(100vh - 21em) !important;
-  min-height: calc(100vh - 21em) !important;
+.step-wrapper{
+  height: calc(100% - 40px);
 }
 
-.data-table-wrap a {
-  transition: 0.2s ease;
-  line-height: 1.3;
+.details-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  opacity: 60%;
+  padding-top: 20px;
 }
 
-.data-table-wrap a:hover {
-  color: var(--primary-400);
+.type-wrapper{
+  padding: 24px 0px;
+  border-bottom: 2px solid var(--border-200);
 }
 
-.data-table-paginator-wrap {
-  background-color: var(--background-white);
-  width: 100%;
-  height: 4.66em;
-  border-top: solid 1.5px #efefef;
-  box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
-  position: relative;
-  padding: 16px 24px;
+.parameters-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 90%;
+  max-width: 500px;
+  padding-top: 24px;
 }
 
-.fade {
-  opacity: 0.3;
-}
-.header-text {
-  padding-top: 7px;
-  padding-bottom: 7px;
-  font-family: var(--text-medium-font-family);
+.parameter-wrapper{
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
 }
 
-.data-content {
-  max-height: calc(100vh - 30em);
-  overflow: auto;
-  padding-left: 20%;
-  padding-right: 20%;
+.parameter-wrapper mat-form-field {
+  width: 40%;
 }
 
-.save-container {
-  margin-right: 5px;
-  margin-left: 5px;
+.header-wrapper{
+  padding-top: 24px;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  max-width: 500px;
+  gap: 12px;
 }
 
-.submit-btn {
-  border: none;
-  border-radius: 4px;
-  background-color: var(--primary-400);
-  color: #fff;
-  display: inline-block;
-  font-family: var(--text-medium-font-family);
-  padding: 0.6em 1.5em;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  cursor: pointer;
-  min-height: 2em;
-  min-width: 5em;
-  text-align: center;
-  transition: all 0.5s ease;
-  font-size: 1.1em;
-  box-shadow: 0px 0px 6px 0 rgba(0, 0, 0, 0.5);
-  font-family: var(--text-light-font-family);
+.image-wrapper{
+  display: none;  
+  gap: 10px;
 }
 
-.submit-btn:hover {
-  background-color: var(--primary-500);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.32);
+.parameter-wrapper:hover .image-wrapper{
+ display: flex;
 }
 
-.submit-btn:disabled {
-  cursor: not-allowed !important;
-  background: var(--primary-300) !important;
-  color: white !important;
-  box-shadow: none;
+.stepper{
+   height: 100%;
 }
 
-.submit-btn:disabled:hover {
-  color: white;
-  box-shadow: none !important;
-}
-
-.last-input {
-  margin-bottom: 30px;
-}
-
-.policy-text-value {
-  font-size: 15px;
-  font-family: var(--text-medium-font-family);
-  padding-top: 5px;
-}
-
-/**********ERROR MESSAGES**********/
-
-.pacman-alert {
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5%;
-  text-align: center;
-}
-
-.pacman-alert .sa-icon {
-  width: 80px;
-  height: 80px;
-  border: 4px solid gray;
-  border-radius: 50%;
-  margin: 20px auto;
-  position: relative;
-  box-sizing: content-box;
-}
-
-.pacman-alert .sa-icon.sa-error {
-  border-color: #d43f3a;
-}
-
-.pacman-alert .sa-icon.sa-error .sa-x-mark {
-  position: relative;
-  display: block;
-}
-
-.pacman-alert .sa-icon.sa-error .sa-line {
-  position: absolute;
-  height: 5px;
-  width: 47px;
-  background-color: #d9534f;
-  display: block;
-  top: 37px;
-  border-radius: 2px;
-}
-
-.pacman-alert .sa-icon.sa-error .sa-line.sa-left {
-  transform: rotate(45deg);
-  left: 17px;
-}
-
-.pacman-alert .sa-icon.sa-error .sa-line.sa-right {
-  transform: rotate(-45deg);
-  right: 16px;
-}
-
-@keyframes animateErrorIcon {
-  0% {
-    transform: rotateX(100deg);
-    opacity: 0;
-  }
-  100% {
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-}
-
-.animateErrorIcon {
-  animation: animateErrorIcon 0.5s;
-}
-
-@keyframes animateXMark {
-  0% {
-    transform: scale(0.4);
-    margin-top: 26px;
-    opacity: 0;
-  }
-  50% {
-    transform: scale(0.4);
-    margin-top: 26px;
-    opacity: 0;
-  }
-  80% {
-    transform: scale(1.15);
-    margin-top: -6px;
-  }
-  100% {
-    transform: scale(1);
-    margin-top: 0;
-    opacity: 1;
-  }
-}
-
-.animateXMark {
-  animation: animateXMark 0.5s;
-}
-
-.pacman-progress {
-  font-size: 22px;
-  color: black;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 7%;
-  text-align: center;
-}
-
-.pacman-progress .title {
-  padding-bottom: 10px;
-}
-
-.pacman-progress .image {
-  padding-bottom: 10px;
-  background: url("../../../../../assets/images/pacman.gif") no-repeat;
-  height: 3em;
-  background-position: center;
-}
-
-.pacman-progress .content {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-size: 15px;
-}
-
-.pacman-progress .content .highlight {
-  color: var(--primary-500);
-  background-color: transparent;
-}
-
-/*************SUCCESS MESSAGES************/
-
-.pacman-alert-title {
-  position: relative;
-  font-size: 20px;
-  color: black;
-  padding-bottom: 10px;
-  padding-top: 0px;
-}
-
-.pacman-alert-message {
-  position: relative;
-  font-size: 14px;
-  color: black;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  line-height: 25px;
-}
-
-.pacman-alert-button {
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-
-.hide {
+.add-icon{
   display: none;
 }
 
-.pacman-alert .sa-icon {
-  width: 80px;
-  height: 80px;
-  border: 4px solid gray;
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  border-radius: 50%;
-  margin: 20px auto;
-  padding: 0;
-  position: relative;
-  box-sizing: content-box;
+.isLastIndex{
+  display: flex;
 }
 
-.pacman-alert .sa-icon.sa-success {
-  border-color: #4caf50;
+.params-header{
+   width: 40%;
+   font: var(--text-body-2);
+   color: var(--text-high-emphasis);
 }
 
-.pacman-alert .sa-icon.sa-success::before,
-.pacman-alert .sa-icon.sa-success::after {
-  content: "";
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  border-radius: 50%;
-  position: absolute;
-  width: 60px;
-  height: 120px;
-  background: white;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+.isEnabled{
+   opacity: 100%;
 }
 
-.pacman-alert .sa-icon.sa-success::before {
-  -webkit-border-radius: 120px 0 0 120px;
-  border-radius: 120px 0 0 120px;
-  top: -7px;
-  left: -33px;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-transform-origin: 60px 60px;
-  transform-origin: 60px 60px;
+.details-wrapper,.parameter-wrapper ::ng-deep .mat-form-field-wrapper{
+  background-color: var(--background-white) !important;
+  border-radius: 4px;
 }
 
-.pacman-alert .sa-icon.sa-success::after {
-  -webkit-border-radius: 0 120px 120px 0;
-  border-radius: 0 120px 120px 0;
-  top: -11px;
-  left: 30px;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-transform-origin: 0px 60px;
-  transform-origin: 0px 60px;
+::ng-deep .mat-select-panel-wrap{
+  padding-top: 30px;
+  padding-left: 4px;
 }
 
-.pacman-alert .sa-icon.sa-success .sa-placeholder {
-  width: 80px;
-  height: 80px;
-  border: 4px solid rgba(76, 175, 80, 0.5);
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  border-radius: 50%;
-  box-sizing: content-box;
-  position: absolute;
-  left: -4px;
-  top: -4px;
-  z-index: 2;
+.hide{
+  display: none;
 }
 
-.pacman-alert .sa-icon.sa-success .sa-fix {
-  width: 5px;
-  height: 90px;
-  background-color: white;
-  position: absolute;
-  left: 28px;
-  top: 8px;
-  z-index: 1;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.pacman-alert .sa-icon.sa-success.animate::after {
-  -webkit-animation: rotatePlaceholder 4.25s ease-in;
-  animation: rotatePlaceholder 4.25s ease-in;
-}
-
-.pacman-alert .sa-icon.sa-success {
-  border-color: transparent\9;
-}
-
-.pacman-alert .sa-icon.sa-success .sa-line.sa-tip {
-  -ms-transform: rotate(45deg) \9;
-}
-
-.pacman-alert .sa-icon.sa-success .sa-line.sa-long {
-  -ms-transform: rotate(-45deg) \9;
-}
-
-.animateSuccessTip {
-  -webkit-animation: animateSuccessTip 0.75s;
-  animation: animateSuccessTip 0.75s;
-}
-
-.animateSuccessLong {
-  -webkit-animation: animateSuccessLong 0.75s;
-  animation: animateSuccessLong 0.75s;
-}
-
-@-webkit-keyframes animateSuccessLong {
-  0% {
-    width: 0;
-    right: 46px;
-    top: 54px;
-  }
-  65% {
-    width: 0;
-    right: 46px;
-    top: 54px;
-  }
-  84% {
-    width: 55px;
-    right: 0px;
-    top: 35px;
-  }
-  100% {
-    width: 47px;
-    right: 8px;
-    top: 38px;
-  }
-}
-
-@-webkit-keyframes animateSuccessTip {
-  0% {
-    width: 0;
-    left: 1px;
-    top: 19px;
-  }
-  54% {
-    width: 0;
-    left: 1px;
-    top: 19px;
-  }
-  70% {
-    width: 50px;
-    left: -8px;
-    top: 37px;
-  }
-  84% {
-    width: 17px;
-    left: 21px;
-    top: 48px;
-  }
-  100% {
-    width: 25px;
-    left: 14px;
-    top: 45px;
-  }
-}
-
-@keyframes animateSuccessTip {
-  0% {
-    width: 0;
-    left: 1px;
-    top: 19px;
-  }
-  54% {
-    width: 0;
-    left: 1px;
-    top: 19px;
-  }
-  70% {
-    width: 50px;
-    left: -8px;
-    top: 37px;
-  }
-  84% {
-    width: 17px;
-    left: 21px;
-    top: 48px;
-  }
-  100% {
-    width: 25px;
-    left: 14px;
-    top: 45px;
-  }
-}
-
-@keyframes animateSuccessLong {
-  0% {
-    width: 0;
-    right: 46px;
-    top: 54px;
-  }
-  65% {
-    width: 0;
-    right: 46px;
-    top: 54px;
-  }
-  84% {
-    width: 55px;
-    right: 0px;
-    top: 35px;
-  }
-  100% {
-    width: 47px;
-    right: 8px;
-    top: 38px;
-  }
-}
-
-.pacman-alert .sa-icon.sa-success .sa-line {
-  height: 5px;
-  background-color: #4caf50;
-  display: block;
-  border-radius: 2px;
-  position: absolute;
-  z-index: 2;
-}
-
-.pacman-alert .sa-icon.sa-success .sa-line.sa-tip {
-  width: 25px;
-  left: 14px;
-  top: 46px;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.pacman-alert .sa-icon.sa-success .sa-line.sa-long {
-  width: 47px;
-  right: 8px;
-  top: 38px;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-@-webkit-keyframes rotatePlaceholder {
-  0% {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-  5% {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-  12% {
-    transform: rotate(-405deg);
-    -webkit-transform: rotate(-405deg);
-  }
-  100% {
-    transform: rotate(-405deg);
-    -webkit-transform: rotate(-405deg);
-  }
-}
-
-@keyframes rotatePlaceholder {
-  0% {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-  5% {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-  12% {
-    transform: rotate(-405deg);
-    -webkit-transform: rotate(-405deg);
-  }
-  100% {
-    transform: rotate(-405deg);
-    -webkit-transform: rotate(-405deg);
-  }
-}
-
-.highlight-blue {
-  color: var(--primary-400) !important;
-  background-color: transparent;
-}
-
-/*******Alexa Keyword********/
-
-.not-available {
-  color: red;
-  font-style: bold;
-  display: inline-block;
-}
-
-.available {
-  color: green;
-  font-style: bold;
-  display: inline-block;
+input{
+  font: var(--text-body-1);
+  color: var(--text-high-emphasis);
 }
