--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -274,8 +274,12 @@ th.mat-sort-header-sorted {
   color: black;
 }
 
+.row-title{
+  color: var(--primary-400);
+}
 
-tr.mat-row:hover{
+
+.row-hover:hover{
   background-color: var(--background-grey);
   cursor: pointer;
 }
@@ -341,4 +345,16 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   padding: 6px 4px;
   border-radius: 4px;
   font: var(--text-body-2);
+}
+
+.table-wrapper ::ng-deep .mat-sort-header-arrow{
+  display: none;
+}
+
+.table-wrapper ::ng-deep .mat-sort-header-content{
+  gap: 11px;
+}
+
+.rotate-180{
+  transform: rotate(180deg);
 }
