feat: added table in policy details screen

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -75,6 +75,7 @@ color: var(--primary-500);
 }
 
 .policy-knowledgebase-wrapper {
+  overflow: scroll;
   height: 100%;
   display: flex;
   flex-direction: column;
